--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SW11 Sunshine!</string>
+    <string name="app_name">Sunshine!</string>
     <string name="action_settings">Settings</string>
     <string name="refresh">Refresh</string>
 </resources>
