--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Sunshine!</string>
     <string name="action_settings">Settings</string>
     <string name="refresh">Refresh</string>
-    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_detail">Detailed Outlook</string>
+    <string name="title_activity_settings">Settings</string>
 </resources>
