--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">Sunshine!</string>
     <string name="action_settings">Settings</string>
     <string name="refresh">Refresh</string>
+    <string name="share_with_label">Share weather with...</string>
+    <string name="share_pre_text">Hey, check out the latest forecast! </string>
+    <string name="share_append_text">#Sunshine!</string>
+    <string name="share_menu_label">Share</string>
     <string name="view_location">View Location</string>
     <string name="title_activity_detail">Detailed Outlook</string>
     <string name="title_activity_settings">Settings</string>
